app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    -webkit-tap-highlight-color: transparent;
    color-scheme: light;
    @apply bg-red-600;
  }

  @media (prefers-color-scheme: dark) {
    :root {
      color-scheme: dark;
      @apply bg-red-600;
    }
  }

  /* Global text selection styles */
  ::selection {
    @apply bg-black text-white;
  }

  ::-moz-selection {
    @apply bg-black text-white;
  }

  /* Dark mode selection styles */
  @media (prefers-color-scheme: dark) {
    ::selection {
      @apply bg-white text-black;
    }

    ::-moz-selection {
      @apply bg-white text-black;
    }
  }
}

